lab1/Test/L1-A-10-2.output
Error Type B at Line 31
Error Type A at Line 46
Error Type A at Line 89
Error Type A at Line 116
